--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Happy Birthday</title>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
   <script src="script.js" defer></script>
 </head>
 <body>
@@ -16,12 +17,14 @@
     </div>
 
     <div class="buttons-grid">
-      <button class="btn blue">MESSAGE</button>
-      <button class="btn red">GALLERY</button>
-      <button class="btn purple">MUSIC</button>
-      <button class="btn green">TETRIS</button>
+      <button class="btn blue" id="btn-message">MESSAGE</button>
+      <button class="btn red" id="btn-gallery">GALLERY</button>
+      <button class="btn purple" id="btn-music">MUSIC</button>
+      <button class="btn green" id="btn-tetris">TETRIS</button>
     </div>
+
     <audio id="bg-music" src="https://voca.ro/1g8MAtqJdFoG"></audio>
+
     <div class="controls">
       <div class="dpad">
         <div class="up"></div>
