--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head> 
+<head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Happy Birthday</title>
@@ -11,11 +11,15 @@
 </head>
 <body>
   <div class="gameboy">
+    <!-- Layar -->
     <div class="screen">
       <h1 id="title">Hai Mikhaela Nazareta Kurniawan!</h1>
       <p class="subtitle">Press Start Button 🥞</p>
     </div>
 
+
+
+    <!-- Tombol Menu -->
     <div class="buttons-grid">
       <button class="btn blue" id="btn-message">MESSAGE</button>
       <button class="btn red" id="btn-gallery">GALLERY</button>
@@ -23,8 +27,10 @@
       <button class="btn green" id="btn-tetris">TETRIS</button>
     </div>
 
-    <audio id="bg-music" src="https://voca.ro/1g8MAtqJdFoG"></audio>
+    <!-- Musik -->
+    <audio id="bg-music" src="https://voca.ro/1g8MAtqJdFoG" preload="auto"></audio>
 
+    <!-- Kontrol -->
     <div class="controls">
       <div class="dpad">
         <div class="up"></div>
@@ -40,6 +46,7 @@
       </div>
     </div>
 
+    <!-- Tombol bawah -->
     <div class="bottom-buttons">
       <button id="select">RESET</button>
       <button id="start">START</button>
