--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <!-- Layar -->
     <div class="screen">
       <h1 id="title">Hai Mikhaela Nazareta Kurniawan!</h1>
-      <p class="subtitle">Press Start Button 🥞</p>
+      <p class="subtitle blink">Press Start Button 🥞</p>
+
     </div>
 
 
