--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>From Me</title>
+  <title>Happy Birthday</title>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
@@ -13,8 +13,8 @@
   <div class="gameboy">
     <!-- Layar -->
     <div class="screen">
-      <h1 id="title">Hai Mikhaela Nazareta Kurniawan!</h1>
-      <p class="subtitle blink">Press Start Button 🥞</p>
+      <h1 id="title">Hai Mikhaela Nazaretha Kurniawan!</h1>
+     <p class="subtitle blink">Press Start Button 🥞</p>
 
     </div>
 
@@ -28,8 +28,13 @@
       <button class="btn green" id="btn-tetris">TETRIS</button>
     </div>
 
-    <!-- Musik -->
-    <audio id="bg-music" src="https://voca.ro/1g8MAtqJdFoG" preload="auto"></audio>
+  <audio id="bg-music"
+       src="https://raw.githubusercontent.com/Lucverid/birthday-audio/main/Winners.mp3"
+       preload="auto">
+</audio>
+
+
+
 
     <!-- Kontrol -->
     <div class="controls">
