--- a/index.html
+++ b/index.html
@@ -2,25 +2,31 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Happy Birthday</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>FROM ME</title>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
-  <script src="script.js" defer></script>
 </head>
 <body>
-  <div class="gameboy">
-    <!-- Layar -->
+
+  <!-- Login Screen -->
+  <div class="login-screen" id="login-screen">
+    <div class="welcome-text">Welcome 👾</div>
+    <h2>Masukkan Username dan Password</h2>
+    <input type="text" id="username" placeholder="Username">
+    <input type="password" id="password" placeholder="Password">
+    <button onclick="login()">LOGIN</button>
+    <div class="error-msg" id="error-msg"></div>
+  </div>
+
+  <!-- Gameboy Main App -->
+  <div class="gameboy" id="main-app" style="display: none;">
     <div class="screen">
       <h1 id="title">Hai Mikhaela Nazaretha Kurniawan!</h1>
-     <p class="subtitle blink">Press Start Button 🥞</p>
-
+      <p class="subtitle blink">Press Start Button 🥞</p>
     </div>
 
-
-
-    <!-- Tombol Menu -->
     <div class="buttons-grid">
       <button class="btn blue" id="btn-message">MESSAGE</button>
       <button class="btn red" id="btn-gallery">GALLERY</button>
@@ -28,15 +34,8 @@
       <button class="btn green" id="btn-tetris">TETRIS</button>
     </div>
 
-  <audio id="bg-music"
-       src="https://raw.githubusercontent.com/Lucverid/birthday-audio/main/Winners.mp3"
-       preload="auto">
-</audio>
+    <audio id="bg-music" src="https://raw.githubusercontent.com/Lucverid/birthday-audio/main/Winners.mp3" preload="auto"></audio>
 
-
-
-
-    <!-- Kontrol -->
     <div class="controls">
       <div class="dpad">
         <div class="up"></div>
@@ -45,18 +44,31 @@
         <div class="right"></div>
         <div class="down"></div>
       </div>
-
       <div class="ab-buttons">
         <button class="circle">A</button>
         <button class="circle">B</button>
       </div>
     </div>
 
-    <!-- Tombol bawah -->
     <div class="bottom-buttons">
       <button id="select">RESET</button>
       <button id="start">START</button>
     </div>
   </div>
+
+  <script>
+    function login() {
+      const user = document.getElementById("username").value.trim();
+      const pass = document.getElementById("password").value.trim();
+      const error = document.getElementById("error-msg");
+
+      if (user === "Mikhaela Nazaretha Kurniawan" && pass === "200805") {
+        document.getElementById("login-screen").style.display = "none";
+        document.getElementById("main-app").style.display = "block";
+      } else {
+        error.textContent = "Username atau password salah!";
+      }
+    }
+  </script>
 </body>
 </html>
