--- a/index.html
+++ b/index.html
@@ -19,15 +19,16 @@
 </head>
 <body>
 
-  <!-- Login Screen -->
-  <div class="login-screen" id="login-screen">
-    <div class="welcome-text">Welcome 👾</div>
-    <h2>Masukkan Username dan Password</h2>
-    <input type="text" id="username" placeholder="Username">
-    <input type="password" id="password" placeholder="Password">
-    <button onclick="login()">LOGIN</button>
-    <div class="error-msg" id="error-msg"></div>
-  </div>
+ <!-- Login Screen -->
+<div class="login-screen" id="login-screen">
+  <div class="welcome-text">Welcome 👾</div>
+  <h2>Masukkan Username dan Password</h2>
+  <input type="text" id="username" placeholder="Username">
+  <input type="password" id="password" placeholder="Password">
+  <button type="button" onclick="login()">LOGIN</button>
+  <div class="error-msg" id="error-msg"></div>
+</div>
+
 
   <!-- Gameboy Main App -->
   <div class="gameboy" id="main-app" style="display: none;">
