--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div class="gameboy" id="main-app" style="display: none;">
     <div class="screen">
       <h1 id="title">Hai Mikhaela Nazaretha Kurniawan!</h1>
-      <p class="subtitle subtitle-center blink">Press Start Button 🥞</p>
+      <p class="subtitle blink">Press Start Button 🥞</p>
     </div>
 
     <div class="buttons-grid">
