--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
       <button id="start">START</button>
     </div>
   </div>
-
-  <script src="script.js"></script>
+<script src="script.js" defer></script>
 </body>
 </html>
